# opi-fancontrol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README.zh-cn.md  example.ini
src/: main.cc  task.cc  task.h
src/config/: config.cc  config.h
src/service/: PwmService.cc  PwmService.h  TemperatureService.cc  monitor_service.cc  monitor_service.h  pwm_service.cc  pwm_service.h  temperature_service.cc  temperature_service.h
